package com.skplanet.storeplatform.sac.clinet.intfmessage.product.vo;

option java_package = "com.skplanet.storeplatform.sac.client.intfmessage.product.vo";
import "intfmessage/common/CommonResponseProto.proto";
import "intfmessage/product/ProductProto.proto";


message SpecificProductListResult {
  required com.skplanet.storeplatform.sac.client.intfmessage.common.vo.CommonResponse commonRes = 1;    // 공통 Response
  repeated com.skplanet.storeplatform.sac.client.intfmessage.product.vo.Product productList = 2;
}